--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "Serverul backend pentru aplicatia de la licenta",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Titeche Anamaria-Florentina",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.11.5"
+  }
 }
