--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
@@ -21,7 +22,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
+    "dotenv": "^16.4.5",
     "eslint": "^9.4.0",
-    "globals": "^15.3.0"
+    "globals": "^15.3.0",
+    "nodemon": "^3.1.2"
   }
 }
