--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.18.0",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.5"
