--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.3.1",
     "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
-    "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "pg": "^8.11.5"
   },
   "devDependencies": {
