--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "https": "^1.0.0",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
